--- a/app/content/table/lithium.yml
+++ b/app/content/table/lithium.yml
@@ -1,6 +1,6 @@
 element: "lithium"
 name: "Lithium"
-summary: "HTML5 Responsive one page template. Includes SCSS, Coffeescript files. Built using Hedgehog front-end framework."
+summary: "HTML5 Responsive one page template. Includes SCSS, CoffeeScript files. Built using Hedgehog front-end framework."
 demoUrl: "http://owl-design.net/demos/lithium/"
 downloadUrl: "http://freebiesbug.com/code-stuff/lithium-html5-responsive-one-page-template/"
 githubUrl: "http://github.com"
