added github url

--- a/app/content/table/lithium.yml
+++ b/app/content/table/lithium.yml
@@ -3,7 +3,7 @@ name: "Lithium"
 summary: "HTML5 Responsive one page template. Includes SCSS, CoffeeScript files. Built using Hedgehog front-end framework."
 demoUrl: "http://owl-design.net/demos/lithium/"
 downloadUrl: "http://freebiesbug.com/code-stuff/lithium-html5-responsive-one-page-template/"
-githubUrl: "http://github.com"
+githubUrl: "https://github.com/owldesign/lithium"
 slides:
   -
     image: "lithium-featured-image.jpg"
